Add created at handler
