# docs/web_deploy/openapi.json
@@ -30,7 +30,7 @@
                 "properties": {
                   "data": {
                     "type": "object",
-                    "$ref": "#/components/schemas/AdminLoginRequest"
+                    "$ref": "#/components/schemas/AdminLogin"
                   }
                 }
               }
@@ -38,8 +38,8 @@
           }
         },
         "responses": {
-          "201": {
-            "description": "Created",
+          "200": {
+            "description": "Success",
             "content": {
               "application/json": {
                 "schema": {
@@ -47,7 +47,7 @@
                   "properties": {
                     "data": {
                       "type": "object",
-                      "$ref": "#/components/schemas/AdminLogin"
+                      "$ref": "#/components/schemas/JwtPair"
                     }
                   }
                 }
@@ -71,6 +71,63 @@
                       }
                     }
                   }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/UnauthorizedError"
+                }
+              }
+            }
+          },
+          "500": {
+            "$ref": "#/components/responses/InternalError"
+          }
+        }
+      }
+    },
+    "/created_at": {
+      "post": {
+        "tags": [
+          "User Authentication"
+        ],
+        "summary": "Created at",
+        "operationId": "createdAt",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "data": {
+                      "type": "object",
+                      "$ref": "#/components/schemas/CreatedAt"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/UnauthorizedError"
                 }
               }
             }
@@ -99,7 +156,7 @@
                 "properties": {
                   "data": {
                     "type": "object",
-                    "$ref": "#/components/schemas/LoginRequest"
+                    "$ref": "#/components/schemas/Login"
                   }
                 }
               }
@@ -116,7 +173,7 @@
                   "properties": {
                     "data": {
                       "type": "object",
-                      "$ref": "#/components/schemas/Login"
+                      "$ref": "#/components/schemas/JwtPair"
                     }
                   }
                 }
@@ -140,6 +197,17 @@
                       }
                     }
                   }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/UnauthorizedError"
                 }
               }
             }
@@ -227,18 +295,14 @@
         "tags": [
           "User Authentication"
         ],
-        "summary": "Refresh token endpoint",
+        "summary": "Refresh token",
+        "description": "Use Bearer authentication for make request.",
         "operationId": "refreshToken",
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "$ref": "#/components/schemas/RefreshTokenRequest"
-              }
-            }
+        "security": [
+          {
+            "bearerAuth": []
           }
-        },
+        ],
         "responses": {
           "200": {
             "description": "Success",
@@ -249,15 +313,23 @@
                   "properties": {
                     "data": {
                       "type": "object",
-                      "$ref": "#/components/schemas/RefreshTokenResponse"
+                      "$ref": "#/components/schemas/JwtPair"
                     }
                   }
                 }
               }
             }
           },
-          "400": {
-            "$ref": "#/components/responses/BadRequest"
+          "401": {
+            "description": "Unauthorized",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/UnauthorizedError"
+                }
+              }
+            }
           },
           "500": {
             "$ref": "#/components/responses/InternalError"
@@ -300,7 +372,7 @@
                   "properties": {
                     "data": {
                       "type": "object",
-                      "$ref": "#/components/schemas/Registration"
+                      "$ref": "#/components/schemas/JwtPair"
                     }
                   }
                 }
@@ -354,34 +426,11 @@
               "attributes": {
                 "type": "object",
                 "required": [
-                  "access_token",
-                  "refresh_token",
-                  "token_type",
-                  "expires_in",
-                  "refresh_expires_in"
+                  "auth_pair"
                 ],
                 "properties": {
-                  "access_token": {
-                    "type": "string",
-                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjoxLCJ1c2VyX2FkZHJlc3MiOi..."
-                  },
-                  "refresh_token": {
-                    "type": "string"
-                  },
-                  "token_type": {
-                    "type": "string",
-                    "enum": [
-                      "JWT"
-                    ]
-                  },
-                  "expires_in": {
-                    "type": "int64",
-                    "example": 300,
-                    "description": "In seconds"
-                  },
-                  "refresh_expires_in": {
-                    "type": "int64",
-                    "description": "In hours"
+                  "auth_pair": {
+                    "$ref": "#/components/schemas/AuthPair"
                   }
                 }
               }
@@ -402,46 +451,6 @@
             ]
           }
         }
-      },
-      "AdminLoginKeyRequest": {
-        "type": "object",
-        "required": [
-          "type"
-        ],
-        "properties": {
-          "type": {
-            "type": "string",
-            "enum": [
-              "admin_login_request"
-            ]
-          }
-        }
-      },
-      "AdminLoginRequest": {
-        "allOf": [
-          {
-            "$ref": "#/components/schemas/AdminLoginRequest"
-          },
-          {
-            "type": "object",
-            "required": [
-              "attributes"
-            ],
-            "properties": {
-              "attributes": {
-                "type": "object",
-                "required": [
-                  "auth_pair"
-                ],
-                "properties": {
-                  "auth_pair": {
-                    "$ref": "#/components/schemas/AuthPair"
-                  }
-                }
-              }
-            }
-          }
-        ]
       },
       "AuthNonce": {
         "allOf": [
@@ -550,6 +559,21 @@
             "pattern": "^0x[0-9a-fA-F]+$",
             "example": "0x0bf7b3c454fedc179af06cd02f62fb3d89b2ac16962d50137330ffeebe9fac5f6bb2d1f2a971834a8eb84ce0a28894578286812a1131cfe7921b2d325d0b06041c",
             "description": "Backend-generated message, signed with MetaMask's private_sign"
+          }
+        }
+      },
+      "CreatedAt": {
+        "type": "object",
+        "required": [
+          "address",
+          "created_at"
+        ],
+        "properties": {
+          "address": {
+            "type": "string"
+          },
+          "created_at": {
+            "type": "string"
           }
         }
       },
@@ -2262,10 +2286,57 @@
           }
         }
       },
-      "Login": {
+      "Jwt": {
         "allOf": [
           {
-            "$ref": "#/components/schemas/LoginKey"
+            "$ref": "#/components/schemas/JwtKey"
+          },
+          {
+            "type": "object",
+            "required": [
+              "attributes"
+            ],
+            "properties": {
+              "attributes": {
+                "required": [
+                  "expires_in"
+                ],
+                "type": "object",
+                "properties": {
+                  "expires_in": {
+                    "type": "int64",
+                    "example": 3000
+                  }
+                }
+              }
+            }
+          }
+        ]
+      },
+      "JwtKey": {
+        "type": "object",
+        "required": [
+          "type",
+          "id"
+        ],
+        "properties": {
+          "id": {
+            "type": "string",
+            "description": "token"
+          },
+          "type": {
+            "type": "string",
+            "enum": [
+              "refresh_jwt",
+              "session_jwt"
+            ]
+          }
+        }
+      },
+      "JwtPair": {
+        "allOf": [
+          {
+            "$ref": "#/components/schemas/JwtPairKey"
           },
           {
             "type": "object",
@@ -2276,34 +2347,17 @@
               "attributes": {
                 "type": "object",
                 "required": [
-                  "access_token",
                   "refresh_token",
-                  "token_type",
-                  "expires_in",
-                  "refresh_expires_in"
+                  "session_token"
                 ],
                 "properties": {
-                  "access_token": {
-                    "type": "string",
-                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjoxLCJ1c2VyX2FkZHJlc3MiOi..."
-                  },
                   "refresh_token": {
-                    "type": "string"
+                    "type": "object",
+                    "$ref": "#/components/schemas/Jwt"
                   },
-                  "token_type": {
-                    "type": "string",
-                    "enum": [
-                      "JWT"
-                    ]
-                  },
-                  "expires_in": {
-                    "type": "int64",
-                    "example": 300,
-                    "description": "In seconds"
-                  },
-                  "refresh_expires_in": {
-                    "type": "int64",
-                    "description": "In hours"
+                  "session_token": {
+                    "type": "object",
+                    "$ref": "#/components/schemas/Jwt"
                   }
                 }
               }
@@ -2311,7 +2365,7 @@
           }
         ]
       },
-      "LoginKey": {
+      "JwtPairKey": {
         "type": "object",
         "required": [
           "type"
@@ -2320,15 +2374,15 @@
           "type": {
             "type": "string",
             "enum": [
-              "login"
+              "jwt_pair"
             ]
           }
         }
       },
-      "LoginRequest": {
+      "Login": {
         "allOf": [
           {
-            "$ref": "#/components/schemas/LoginRequestKey"
+            "$ref": "#/components/schemas/LoginKey"
           },
           {
             "type": "object",
@@ -2351,7 +2405,7 @@
           }
         ]
       },
-      "LoginRequestKey": {
+      "LoginKey": {
         "type": "object",
         "required": [
           "type"
@@ -2362,32 +2416,6 @@
             "enum": [
               "login_request"
             ]
-          }
-        }
-      },
-      "RefreshTokenRequest": {
-        "type": "object",
-        "required": [
-          "refresh_token"
-        ],
-        "properties": {
-          "refresh_token": {
-            "type": "string"
-          }
-        }
-      },
-      "RefreshTokenResponse": {
-        "type": "object",
-        "required": [
-          "access_token",
-          "refresh_token"
-        ],
-        "properties": {
-          "access_token": {
-            "type": "string"
-          },
-          "refresh_token": {
-            "type": "string"
           }
         }
       },
@@ -2427,125 +2455,6 @@
             "type": "string",
             "enum": [
               "register"
-            ]
-          }
-        }
-      },
-      "Registration": {
-        "allOf": [
-          {
-            "$ref": "#/components/schemas/RegistrationKey"
-          },
-          {
-            "type": "object",
-            "required": [
-              "attributes"
-            ],
-            "properties": {
-              "attributes": {
-                "type": "object",
-                "required": [
-                  "access_token",
-                  "refresh_token",
-                  "token_type",
-                  "expires_in",
-                  "refresh_expires_in",
-                  "user"
-                ],
-                "properties": {
-                  "access_token": {
-                    "type": "string",
-                    "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2lkIjoxLCJ1c2VyX2FkZHJlc3MiOi..."
-                  },
-                  "refresh_token": {
-                    "type": "string"
-                  },
-                  "token_type": {
-                    "type": "string",
-                    "enum": [
-                      "JWT"
-                    ]
-                  },
-                  "expires_in": {
-                    "type": "int64",
-                    "example": 300,
-                    "description": "In seconds"
-                  },
-                  "refresh_expires_in": {
-                    "type": "int64",
-                    "example": 7,
-                    "description": "In hours"
-                  },
-                  "user": {
-                    "$ref": "#/components/schemas/User"
-                  }
-                }
-              }
-            }
-          }
-        ]
-      },
-      "RegistrationKey": {
-        "type": "object",
-        "required": [
-          "id",
-          "type"
-        ],
-        "properties": {
-          "id": {
-            "type": "int64",
-            "example": 83,
-            "description": "User ID"
-          },
-          "type": {
-            "type": "string",
-            "enum": [
-              "registration"
-            ]
-          }
-        }
-      },
-      "User": {
-        "allOf": [
-          {
-            "$ref": "#/components/schemas/UserKey"
-          },
-          {
-            "type": "object",
-            "required": [
-              "attributes"
-            ],
-            "properties": {
-              "attributes": {
-                "type": "object",
-                "required": [
-                  "address"
-                ],
-                "properties": {
-                  "address": {
-                    "type": "string",
-                    "example": "0x2a2288cdceEeb2CF60..."
-                  }
-                }
-              }
-            }
-          }
-        ]
-      },
-      "UserKey": {
-        "type": "object",
-        "required": [
-          "id",
-          "type"
-        ],
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "type": {
-            "type": "string",
-            "enum": [
-              "user"
             ]
           }
         }
@@ -2713,6 +2622,15 @@
           ],
           "default": "desc",
           "description": "Order of records on the page. If sortingParam is not specified, order of records is by default sorted by ID."
+        }
+      }
+    },
+    "securitySchemes": {
+      "bearerAuth": {
+        "bearerAuth": {
+          "type": "http",
+          "scheme": "bearer",
+          "bearerFormat": "JWT"
         }
       }
     }
