# internal/service/router.go
@@ -36,6 +36,7 @@ func (s *service) router(cfg config.Config) chi.Router {
 		r.Post("/refresh_token", handlers.RefreshToken)
 		r.Post("/login", handlers.Login)
 		r.Post("/admin_login", handlers.AdminLogin)
+		r.Post("/created_at", handlers.CreatedAt)
 	})
 
 	return r
